2011-03-14 Borut Razem <borut.razem AT gmail.com>

	* configure, configure.in: don't use C99_FLAG in CXXFLAGS
	  for SunPro C++ compiler

2011-03-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (processParms): fixed bug 2084206,
	  (getLeftResultType): return RESULT_TYPE_GPTR for generic pointers,
	  (decorateType, CAST): don't change function pointer to CPOINTER
	  when resulttype is generic pointer, necessary for varargs
	* support/regression/tests/bug2084206.c: new, added

2011-03-13 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCglobl.h: don't incude stdbool.h if compiled with c++

2011-03-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Preparations for rematerialization support in new allocator.
	* src/z80/ralloc.c:
	  Old register allocator cleanup.
	* src/z80/gen.c:
	  Code reorganization in preparation of more accurate register allocation.

2011-03-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c,
	  support/regression/tests/memory.c:
	  Completed fix for #3188357.

2011-03-07 Borut Razem <borut.razem AT gmail.com>

	* configure, configure.in, src/Makefile.in: CXXFLAGS fixes

2011-03-06 Borut Razem <borut.razem AT gmail.com>

	* sim/ucsim/cmd.src/Makefile.in:
          fixed for bison, byacc and flex version 2.5.4

2011-03-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c:
	  Partial fix for #3188357.

2011-03-05 Borut Razem <borut.razem AT gmail.com>

	* sim/ucsim/configure, sim/ucsim/cmd.src/cmdlexcl.h,
	  sim/ucsim/cmd.src/Makefile.in, sim/ucsim/cmd.src/newcmd.cc,
	  sim/ucsim/cmd.src/cmdset.cc, sim/ucsim/cmd.src/cmdlex.l,
	  sim/ucsim/cmd.src/newcmdposix.cc, sim/ucsim/cmd.src/newcmdwin32.cc,
	  sim/ucsim/cmd.src/cmdpars.y, sim/ucsim/configure.in:
	  use bison instead of unsupported bison++
	* sim/ucsim/cmd.src/flex_lexer.h, sim/ucsim/cmd.src/cmdpars.cc,
	  sim/ucsim/cmd.src/cmdpars.h, sim/ucsim/cmd.src/FlexLexer.h,
	  sim/ucsim/cmd.src/cmdlex.cc: deleted
