@@ -71,11 +71,10 @@ typedef struct asmop
     AOP_TYPE type;
     short coff;                 /* current offset */
     short size;                 /* total size */
-    unsigned  code:1;               /* is in Code space */
-    unsigned  paged:1;              /* in paged memory  */
-    unsigned  freed:1;              /* already freed    */
-    unsigned  bcInUse:1;
-    unsigned  deInUse:1;
+    unsigned  code:1;           /* is in Code space */
+    unsigned  paged:1;          /* in paged memory  */
+    unsigned  freed:1;          /* already freed    */
+    unsigned  bcInUse:1;        /* for banked I/O, which uses bc for the I/O address */
     union
       {
         value *aop_lit;         /* if literal */
